# website-video-recorder

./: README.md  drive.py  main.py  pyproject.toml  sheets.py
utils/: __init__.py  extract_name.py  record_video.py  scroll.py
